--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
- 
- 
   </head>
   <body class="page">
-    
     <header class="header brd">
       <div class="container-header container">
         <nav class="header nav">
@@ -34,7 +31,7 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a class="link header-link" href="./index.html">Studio</a>
+              <a class="link header-link active" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
               <a class="link header-link" href="./portfolio.html">Portfolio</a>
@@ -74,13 +71,23 @@
           <h2 hidden class="visually-hidden">Our benefits</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
+              <div class="bnfts-bg-color">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="bnfts-title title">Strategy</h3>
               <p class="text">
-                Our goal is to identify the business problem to walk away with the
-                perfect and creative solution.
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
               </p>
             </li>
             <li class="benefits-item">
+              <div class="bnfts-bg-color">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="bnfts-title title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -88,6 +95,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="bnfts-bg-color">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="bnfts-title title">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -95,6 +107,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="bnfts-bg-color">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="bnfts-title title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -125,7 +142,9 @@
           </ul>
         </div>
       </section>
-      <!-- section 4  -->
+
+      <!-- Team section 4  -->
+
       <section class="section section-team">
         <div class="container">
           <h2 class="section-title title-team">Our Team</h2>
@@ -136,12 +155,80 @@
                 <h3 class="title title-persn">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
               </div>
+              <div class="network-team-icon">
+                <ul class="network-team">
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/symbol-defs.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/symbol-defs.svg#twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#facebook-1"
+                        ></use></svg></a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#linkedin-1"
+                        ></use></svg></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
-              <img src="./images/smilingman.jpg" alt="smiling man" width="264" />
+              <img
+                src="./images/smilingman.jpg"
+                alt="smiling man"
+                width="264"
+              />
               <div class="team-text-info">
                 <h3 class="title title-persn">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
+              </div>
+              <div class="network-team-icon">
+                <ul class="network-team">
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/symbol-defs.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/symbol-defs.svg#twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#facebook-1"
+                        ></use></svg></a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#linkedin-1"
+                        ></use></svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -149,6 +236,38 @@
               <div class="team-text-info">
                 <h3 class="title title-persn">Camila Garcia</h3>
                 <p class="text">Marketing</p>
+              </div>
+              <div class="network-team-icon">
+                <ul class="network-team">
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/symbol-defs.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/symbol-defs.svg#twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#facebook-1"
+                        ></use></svg></a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#linkedin-1"
+                        ></use></svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -161,6 +280,90 @@
                 <h3 class="title title-persn">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
               </div>
+              <div class="network-team-icon">
+                <ul class="network-team">
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/symbol-defs.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/symbol-defs.svg#twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#facebook-1"
+                        ></use></svg></a>
+                  </li>
+                  <li class="network-item">
+                    <a class="network-link" href="#">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#linkedin-1"
+                        ></use></svg></a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Customers section 5 -->
+
+      <section class="section">
+        <div class="customers-container container">
+          <h2 class="customers-title section-title">Customers</h2>
+          <ul class="clients-list">
+            <li class="clients-item">
+              <a href="" class="clients-link" aria-label="Logo 1">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link" aria-label="Logo 2">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link" aria-label="Logo 3">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link" aria-label="Logo 4">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link" aria-label="Logo 5">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link" aria-label="Logo 6">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#logo-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -173,9 +376,41 @@
           >Web<span class="logo-ftr">Studio</span></a
         >
         <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="network-team-icon">
+        <ul class="network-team">
+          <li class="network-item">
+            <a class="network-link" href="#">
+              <svg width="16" height="16">
+                <use href="./images/symbol-defs.svg#instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="network-item">
+            <a class="network-link" href="">
+              <svg width="16" height="16">
+                <use href="./images/symbol-defs.svg#twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="network-item">
+            <a class="network-link" href="#">
+              <svg width="16" height="16">
+                <use
+                  href="./images/symbol-defs.svg#facebook-1"
+                ></use></svg></a>
+          </li>
+          <li class="network-item">
+            <a class="network-link" href="#">
+              <svg width="16" height="16">
+                <use
+                  href="./images/symbol-defs.svg#linkedin-1"
+                ></use></svg></a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
