--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
               <a class="link header-link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="link header-link" href="./portfolio.html">Portfolio</a>
+              <a class="link header-link active" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-item">
               <a class="link header-link" href="">Contacts</a>
