--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <!-- section 1 -->
       <section class="section-hero">
         <div class="hero-container container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-btn" type="button">Order Service</button>
+          <h1 class="hero-title" >Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
       <!-- section 2 -->
@@ -411,5 +411,19 @@
         </ul>
       </div>
     </footer>
+
+    <!-- Modal window -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-button" type="button" data-modal-close>
+          
+            <svg class="modal-icon" width="8" height="8">
+              <use href="./images/symbol-defs.svg#icon-close"></use>
+            </svg>
+          
+        </button>    
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
