--- a/portfolio.html
+++ b/portfolio.html
@@ -80,16 +80,18 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img class="portfolio-img"
-                  src="./images/row1/img-2.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                
+                  <img class="portfolio-img"
+                    src="./images/row1/img-2.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                
                 <!-- <div class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task
+                  <p>14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
+                  · Cloud Storage App</p>
                 </div> -->
                 <div class="portf-img-info">
                   <h2 class="portf-title title">
