--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,9 @@
               <a class="link header-link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="link header-link active" href="./portfolio.html">Portfolio</a>
+              <a class="link header-link active" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a class="link header-link" href="">Contacts</a>
@@ -80,19 +82,22 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                
-                  <img class="portfolio-img"
+                <div class="prtfl-wrapper">
+                  <img
+                    class="portfolio-img"
                     src="./images/row1/img-2.jpg"
                     alt="Banking App Interface Concept"
                     width="360"
                     height="300"
                   />
-                
-                <!-- <div class="overlay">
-                  <p>14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App</p>
-                </div> -->
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-img-info">
                   <h2 class="portf-title title">
                     Banking App Interface Concept
@@ -103,12 +108,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img 
-                  src="./images/row1/img-1.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="prtfl-wrapper">
+                  <img
+                    src="./images/row1/img-1.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-img-info">
                   <h2 class="portf-title title">Cashless Payment</h2>
                   <p class="text">Marketing</p>
@@ -117,12 +131,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio link" href="">
-                <img
-                  src="./images/row1/img.jpg"
-                  alt="Monitor and phone display"
-                  width="360"
-                  height="300"
-                />
+                <div class="prtfl-wrapper">
+                  <img
+                    src="./images/row1/img.jpg"
+                    alt="Monitor and phone display"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-img-info">
                   <h2 class="portf-title title">Meditation App</h2>
                   <p class="text">App</p>
@@ -131,12 +154,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio link" href="">
-                <img
-                  src="./images/row2/img-2.jpg"
-                  alt="man holding the steering wheel of a car, taxi service"
-                  width="360"
-                  height="300"
-                />
+                <div class="prtfl-wrapper">
+                  <img
+                    src="./images/row2/img-2.jpg"
+                    alt="man holding the steering wheel of a car, taxi service"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-img-info">
                   <h2 class="portf-title title">Taxi Service</h2>
                   <p class="text">Marketing</p>
@@ -145,12 +177,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio link" href="">
-                <img
-                  src="./images/row2/img-1.jpg"
-                  alt="screenshots of the display of various illustration options"
-                  width="360"
-                  height="300"
-                />
+                <div class="prtfl-wrapper">
+                  <img
+                    src="./images/row2/img-1.jpg"
+                    alt="screenshots of the display of various illustration options"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-img-info">
                   <h2 class="portf-title title">Screen Illustrations</h2>
                   <p class="text">Design</p>
@@ -159,12 +200,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio link" href="">
-                <img
-                  src="./images/row2/img.jpg"
-                  alt="A smiling girl takes an online course"
-                  width="360"
-                  height="300"
-                />
+                <div class="prtfl-wrapper">
+                  <img
+                    src="./images/row2/img.jpg"
+                    alt="A smiling girl takes an online course"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-img-info">
                   <h2 class="portf-title title">Online Courses</h2>
                   <p class="text">Marketing</p>
@@ -173,12 +223,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio link" href="">
-                <img
-                  src="./images/row3/img-2.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="prtfl-wrapper">
+                  <img
+                    src="./images/row3/img-2.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-img-info">
                   <h2 class="portf-title title">Instagram Stories Concept</h2>
                   <p class="text">Design</p>
@@ -187,12 +246,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio link" href="">
-                <img
-                  src="./images/row3/img-1.jpg"
-                  alt="A woman carries vegetables in a bag"
-                  width="360"
-                  height="300"
-                />
+                <div class="prtfl-wrapper">
+                  <img
+                    src="./images/row3/img-1.jpg"
+                    alt="A woman carries vegetables in a bag"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-img-info">
                   <h2 class="portf-title title">Organic Food</h2>
                   <p class="text">Web Site</p>
@@ -201,12 +269,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio link" href="">
-                <img
-                  src="./images/row3/img.jpg"
-                  alt="A person makes a drawing on a cup of coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="prtfl-wrapper">
+                  <img
+                    src="./images/row3/img.jpg"
+                    alt="A person makes a drawing on a cup of coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-img-info">
                   <h2 class="portf-title title">Fresh Coffee</h2>
                   <p class="text">Web Site</p>
