--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
                     height="300"
                   />
                   <div class="overlay">
-                    <p>
+                    <p class="wrapper-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
@@ -116,7 +116,7 @@
                     height="300"
                   />
                   <div class="overlay">
-                    <p>
+                    <p class="wrapper-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
@@ -139,7 +139,7 @@
                     height="300"
                   />
                   <div class="overlay">
-                    <p>
+                    <p class="wrapper-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
@@ -162,7 +162,7 @@
                     height="300"
                   />
                   <div class="overlay">
-                    <p>
+                    <p class="wrapper-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
@@ -185,7 +185,7 @@
                     height="300"
                   />
                   <div class="overlay">
-                    <p>
+                    <p class="wrapper-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
@@ -208,7 +208,7 @@
                     height="300"
                   />
                   <div class="overlay">
-                    <p>
+                    <p class="wrapper-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
@@ -231,7 +231,7 @@
                     height="300"
                   />
                   <div class="overlay">
-                    <p>
+                    <p class="wrapper-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
@@ -254,7 +254,7 @@
                     height="300"
                   />
                   <div class="overlay">
-                    <p>
+                    <p class="wrapper-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
@@ -277,7 +277,7 @@
                     height="300"
                   />
                   <div class="overlay">
-                    <p>
+                    <p class="wrapper-text">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                       App · Cloud Storage App
@@ -287,8 +287,7 @@
                 <div class="portf-img-info">
                   <h2 class="portf-title title">Fresh Coffee</h2>
                   <p class="text">Web Site</p>
-                </div></a
-              >
+                </div></a>
             </li>
           </ul>
         </div>
