--- a/index.html
+++ b/index.html
@@ -370,46 +370,50 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a class="link header-logo ftr-logo" href="./index.html"
-          >Web<span class="logo-ftr">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="ftr-info">
+          <a class="link header-logo ftr-logo" href="./index.html"
+            >Web<span class="logo-ftr">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="network-team-icon ftr">
+          <h4>Social media</h4>
+          <ul class="network-team">
+            <li class="network-item">
+              <a class="network-link" href="#">
+                <svg width="16" height="16">
+                  <use href="./images/symbol-defs.svg#instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="network-item">
+              <a class="network-link" href="">
+                <svg width="16" height="16">
+                  <use href="./images/symbol-defs.svg#twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="network-item">
+              <a class="network-link" href="#">
+                <svg width="16" height="16">
+                  <use
+                    href="./images/symbol-defs.svg#facebook-1"
+                  ></use></svg></a>
+            </li>
+            <li class="network-item">
+              <a class="network-link" href="#">
+                <svg width="16" height="16">
+                  <use
+                    href="./images/symbol-defs.svg#linkedin-1"
+                  ></use></svg></a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="network-team-icon">
-        <ul class="network-team">
-          <li class="network-item">
-            <a class="network-link" href="#">
-              <svg width="16" height="16">
-                <use href="./images/symbol-defs.svg#instagram-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="network-item">
-            <a class="network-link" href="">
-              <svg width="16" height="16">
-                <use href="./images/symbol-defs.svg#twitter-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="network-item">
-            <a class="network-link" href="#">
-              <svg width="16" height="16">
-                <use
-                  href="./images/symbol-defs.svg#facebook-1"
-                ></use></svg></a>
-          </li>
-          <li class="network-item">
-            <a class="network-link" href="#">
-              <svg width="16" height="16">
-                <use
-                  href="./images/symbol-defs.svg#linkedin-1"
-                ></use></svg></a>
-          </li>
-        </ul>
-      </div>
+      
     </footer>
 
     <!-- Modal window -->
