--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <div class="ftr-info">
           <a class="link header-logo ftr-logo" href="./index.html"
             >Web<span class="logo-ftr">Studio</span></a
@@ -380,7 +380,7 @@
           </p>
         </div>
         <div class="network-team-icon ftr">
-          <h4>Social media</h4>
+          <h4 class="social-title">Social media</h4>
           <ul class="network-team">
             <li class="network-item">
               <a class="network-link" href="#">
