--- a/portfolio.html
+++ b/portfolio.html
@@ -296,15 +296,51 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="link header-logo ftr-logo" href="./index.html"
-          >Web<span class="logo-ftr">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="ftr-info">
+          <a class="link header-logo ftr-logo" href="./index.html"
+            >Web<span class="logo-ftr">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="network-team-icon ftr">
+          <h4 class="social-title">Social media</h4>
+          <ul class="network-team">
+            <li class="network-item">
+              <a class="network-link" href="#">
+                <svg width="16" height="16">
+                  <use href="./images/symbol-defs.svg#instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="network-item">
+              <a class="network-link" href="">
+                <svg width="16" height="16">
+                  <use href="./images/symbol-defs.svg#twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="network-item">
+              <a class="network-link" href="#">
+                <svg width="16" height="16">
+                  <use
+                    href="./images/symbol-defs.svg#facebook-1"
+                  ></use></svg></a>
+            </li>
+            <li class="network-item">
+              <a class="network-link" href="#">
+                <svg width="16" height="16">
+                  <use
+                    href="./images/symbol-defs.svg#linkedin-1"
+                  ></use></svg></a>
+            </li>
+          </ul>
+        </div>
       </div>
+      
     </footer>
   </body>
 </html>
