--- a/portfolio.html
+++ b/portfolio.html
@@ -307,34 +307,34 @@
           </p>
         </div>
         <div class="network-team-icon ftr">
-          <h4 class="social-title">Social media</h4>
-          <ul class="network-team">
+          <p class="social-title">Social media</p>
+          <ul class="network-team ftr">
             <li class="network-item">
               <a class="network-link" href="#">
-                <svg width="16" height="16">
-                  <use href="./images/symbol-defs.svg#instagram-2"></use>
+                <svg class="ftr-icon-fill" width="24" height="24">
+                  <use href="./images/icons.svg#instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="network-item">
               <a class="network-link" href="">
-                <svg width="16" height="16">
-                  <use href="./images/symbol-defs.svg#twitter-1"></use>
+                <svg class="ftr-icon-fill" width="24" height="24">
+                  <use href="./images/icons.svg#twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="network-item">
               <a class="network-link" href="#">
-                <svg width="16" height="16">
+                <svg class="ftr-icon-fill" width="24" height="24">
                   <use
-                    href="./images/symbol-defs.svg#facebook-1"
+                    href="./images/icons.svg#facebook-1"
                   ></use></svg></a>
             </li>
             <li class="network-item">
               <a class="network-link" href="#">
-                <svg width="16" height="16">
+                <svg class="ftr-icon-fill" width="24" height="24">
                   <use
-                    href="./images/symbol-defs.svg#linkedin-1"
+                    href="./images/icons.svg#linkedin-1"
                   ></use></svg></a>
             </li>
           </ul>
